PyMaker/datas/object2/RawHTML/Python_DOC_referPages.python-syntax-error-while-trying-to-use-sklearn-preprocessing.txt
<div class="post-text" itemprop="text">
<p>I've been going through sentdex's python practical machine learning tutorial <a href="https://pythonprogramming.net/training-testing-machine-learning-tutorial/" rel="nofollow noreferrer">https://pythonprogramming.net/training-testing-machine-learning-tutorial/</a>. Im trying to run the same code, with model_selection instead of cross validation but i get a syntax error when i get to preprocessing.scale(). 
This is my code: </p>
<pre><code>import quandl

import pandas as pd

import numpy as np

import math

from sklearn import preprocessing, svm, model_selection

from sklearn.linear_model import LinearRegression

df = quandl.get('WIKI/GOOGL')

df = df[['Adj. Open', 'Adj. High', 'Adj. Low', 'Adj. Close', 'Adj. Volume']]

df['HL_PT'] =  (df['Adj. High'] - df['Adj. Low']) / df['Adj. Close'] * 100
df['PT_Change'] = (df['Adj. Close'] - df['Adj. Open']) / df['Adj. Open'] * 100

df = df[['Adj. Close', 'HL_PT', 'PT_Change', 'Adj. Volume']]

forecast_col = 'Adj. Close'
df.fillna(-99999, inplace=True)

forecast_out = int(math.ceil(0.01 * len(df)))
print(forecast_out)

df['label'] = df[forecast_col].shift(-forecast_out)
df.dropna(inplace=True)

X = np.array(df.drop(['Label'] ,1)) 

y = np.array(df.drop(['Label'])
X = preprocessing.scale(X)

y2 = np.array(df['label'])

print(forecast_out)
</code></pre>
<p>This is the error message:</p>
<blockquote>
<p>runfile('D:/Course Materials/Data Science/mlpractice.py',
  wdir='D:/Course Materials/Data Science') Traceback (most recent call
  last):</p>
<p>File
  "G:\Anaconda3\lib\site-packages\IPython\core\interactiveshell.py",
  line 2963, in run_code
      exec(code_obj, self.user_global_ns, self.user_ns)</p>
<p>File "", line 1, in 
      runfile('D:/Course Materials/Data Science/mlpractice.py', wdir='D:/Course Materials/Data Science')</p>
<p>File
  "G:\Anaconda3\lib\site-packages\spyder_kernels\customize\spydercustomize.py",
  line 786, in runfile
      execfile(filename, namespace)</p>
<p>File
  "G:\Anaconda3\lib\site-packages\spyder_kernels\customize\spydercustomize.py",
  line 110, in execfile
      exec(compile(f.read(), filename, 'exec'), namespace)</p>
<p>File "D:/Course Materials/Data Science/mlpractice.py", line 36
      X = preprocessing.scale(X)
      ^ SyntaxError: invalid syntax</p>
</blockquote>
<p>Cant progress any further without figuring out why this is happening. 
Any help would be really aprreciated!</p>
</div>
<div class="post-text" itemprop="text">
<p>You need a closing bracket on this line:</p>
<pre><code>y = np.array(df.drop(['Label'])
</code></pre>
<p>The line just before the one stated on the error message is usually where a syntax error is.</p>
</div>
<span class="comment-copy">missing trailing closing brace: <code>y = np.array(df.drop(['Label'])&lt;--- here</code> should be <code>y = np.array(df.drop(['Label']))</code> vote to close as typo. Tip: when you get a syntax error and it looks baffling, check the line preceding it</span>
<span class="comment-copy">Welcome to SO; if the answer resolved your issue, kindly accept it (see <a href="https://stackoverflow.com/help/someone-answers">What should I do when someone answers my question?</a>)</span>
